--- a/Resolucao_em_JavaScript/Exercises_26_50/ex-47.html
+++ b/Resolucao_em_JavaScript/Exercises_26_50/ex-47.html
@@ -5,11 +5,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Atividade 46</title>
+    <title>Atividade 47</title>
 </head>
 
 <body style="padding: 30px;">
-    <h1>Exercício 46</h1>
+    <h1>Exercício 47</h1>
 
     <h3 id="retorno"></h3>
 
@@ -18,7 +18,7 @@
         let soma = 0 // variavel para armazenar o somatorio
 
         setTimeout(() => {
-            for (let i = 6; i <= 100; i += 2) {
+            for (let i = 500; i >= 0; i -= 50) {
                 soma += i
                 // console.log(soma)
             }
